--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 #--------------------------------------------------------------------
 
 CI_ENVIRONMENT = development
+ENV_TOKEN = CeQueJeVeux
 
 #--------------------------------------------------------------------
 # APP
